force-app/main/default/objects/Apttus_Config2__ChargeGroupMember__c/Apttus_Config2__ChargeGroupMember__c.object-meta.xml
<CustomObject>
    <description>Represents the mapping between a charge group and the charge types associated with the group..</description>
    <label>Charge Group Member</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>