force-app/main/default/objects/Apttus_Config2__ChargeGroupMember__c/fields/Apttus_Config2__ChargeGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
    <description>ID of the charge group to which this charge type is associated</description>
    <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
    <label>Charge Group</label>
    <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>