force-app/main/default/objects/Apttus_Config2__ChargeGroupMember__c/fields/Apttus_Config2__ChargeTypeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChargeTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the charge type associated with the group</description>
    <inlineHelpText>ID of the charge type associated with the group</inlineHelpText>
    <label>Charge Type</label>
    <referenceTo>Apttus_Config2__ChargeType__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>